--- a/Framework/WPF/MVVMLight/Framework.WPF.MVVMLight/Framework.WPF.MVVMLight.csproj
+++ b/Framework/WPF/MVVMLight/Framework.WPF.MVVMLight/Framework.WPF.MVVMLight.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
   </ItemGroup>
 
 </Project>
