Trying to add source generator for dependency property

--- a/Framework/WPF/Core/Framework.WPF.Core/Framework.WPF.Core.csproj
+++ b/Framework/WPF/Core/Framework.WPF.Core/Framework.WPF.Core.csproj
@@ -6,4 +6,8 @@
 	 <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Generators\DependencyProperty\Framework.Generators.DependencyProperty\Framework.Generators.DependencyProperty.csproj" />
+  </ItemGroup>
+
 </Project>
