--- a/Framework/WPF/Core/Framework.WPF.Core/Framework.WPF.Core.csproj
+++ b/Framework/WPF/Core/Framework.WPF.Core/Framework.WPF.Core.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommonServiceLocator" Version="2.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Framework.Core\Framework.Core.csproj" />
     <ProjectReference Include="..\..\..\Generators\DependencyProperty\Framework.Generators.DependencyProperty\Framework.Generators.DependencyProperty.csproj" />
   </ItemGroup>
 
