--- a/Source/JWScheduler/JWScheduler.csproj
+++ b/Source/JWScheduler/JWScheduler.csproj
@@ -6,4 +6,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Main\" />
+  </ItemGroup>
+
 </Project>
